--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
             doc.save("solution.pdf");
         }
     </script>
+<h1> Equation solver is not complete yet.</h1>
 
 </body>
 </html>
